// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package gedit.payment;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.payer.unionpay.grpc";
option java_outer_classname = "PayerUnionpayProto";
option objc_class_prefix = "GDA";

import "gedit/common.proto";
import "gedit/payment/payment_common.proto";

// The payment wechat definition.
service PayerInUnionpayApi {
    //----START 收银员打开扫一扫    <------------> 顾客出示银联付款二维码 交互API

    rpc Prepare (PrepareUnionpayPaymentRequest) returns (PrepareUnionpayPaymentResponse) {
        //only called by me, 顾客扫码收银员的收款码后获取如果支付一定金额
    }
    rpc Create (CreateUnionpayPaymentRequest) returns (PaymentResponse) {
        //only called by me, 顾客确定付款
    }
    //----END 收银员打开扫一扫    <------------> 顾客出示银联付款二维码 交互API
}



message PrepareUnionpayPaymentRequest {
    string payerCode = 11; //顾客的银联付款码
    string payerMobile = 12;//顾客手机号

    int32 shouldPay = 15; //应付金额 = 实付金额 + 实付积分等价金额
}

message PrepareUnionpayPaymentResponse {
    Status status = 999;

    string payerCode = 11; //顾客的银联付款码
    string payerMobile = 12;//顾客手机号

    int32 shouldPay = 15; //应付金额 = 实付金额 + 实付积分等价金额
    int32 actualPay = 16; //实付金额
    int32 pointsPay = 17; //实付积分代替金额


}

message CreateUnionpayPaymentRequest {
    //only called by myself，即收银员是我

    string payerCode = 11; //顾客的银联付款码
    string payerMobile = 12;//顾客手机号

    int32 shouldPay = 15; //应付金额 = 实付金额 + 实付积分等价金额
    int32 actualPay = 16; //实付金额
    int32 pointsPay = 17; //实付积分代替金额

    string payeeIp = 18; //收银员客户端的实际ip地址
}